<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>space.maxkonkin</groupId>
	<artifactId>nasapicbot</artifactId>
	<description>NASAPicOnSpringBot</description>
	<packaging>jar</packaging>

	<version>1.0-SNAPSHOT</version>

	<name>NASAPicOnSpringBot</name>

	<properties>
		<java.version>21</java.version>
		<slf4j.version>1.7.30</slf4j.version>
		<spring.version>5.3.30</spring.version>
		<lombok.version>1.18.30</lombok.version>
		<telegrambots-spring-boot-starter.version>6.9.7.1</telegrambots-spring-boot-starter.version>
		<snakeyaml.version>2.2</snakeyaml.version>
		<logback.version>1.4.12</logback.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>

	<dependencies>
		<!-- Spring -->
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-context</artifactId>
			<version>${spring.version}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-webmvc</artifactId>
			<version>${spring.version}</version>
		</dependency>

		<!-- TelegramBots -->
		<!-- https://mvnrepository.com/artifact/org.telegram/telegrambots -->
		<dependency>
			<groupId>org.telegram</groupId>
			<artifactId>telegrambots-spring-boot-starter</artifactId>
			<version>${telegrambots-spring-boot-starter.version}</version>
		</dependency>

		<!-- Lombok -->
		<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>${lombok.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- Snakeyaml -->
		<!-- https://mvnrepository.com/artifact/org.yaml/snakeyaml -->
		<dependency>
			<groupId>org.yaml</groupId>
			<artifactId>snakeyaml</artifactId>
			<version>${snakeyaml.version}</version>
		</dependency>

		<!--LOGGER-->
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>

		<!--YDB-->
		<dependency>
			<groupId>tech.ydb</groupId>
			<artifactId>ydb-sdk-table</artifactId>
		</dependency>
		<dependency>
			<groupId>tech.ydb.auth</groupId>
			<artifactId>yc-auth-provider</artifactId>
		</dependency>
		<dependency>
			<groupId>tech.ydb</groupId>
			<artifactId>ydb-auth-api</artifactId>
			<version>1.0.0</version>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>tech.ydb</groupId>
				<artifactId>ydb-sdk-bom</artifactId>
				<version>2.1.7</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
				<configuration>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
